<resources>
    <string name="app_name">校时代</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_want_regist">我要注册</string>
    <string name="login">登陆</string>
    <string name="use_account_login">使用账号登陆</string>
    <string name="phoneNumber">手机号</string>
    <string name="password">密码</string>
    <string name="forgetpassword">忘记密码？</string>
    <string name="usethirdaccount">使用合作账号登陆</string>
    <string name="weixin">微信</string>
    <string name="weibo">微博</string>
    <string name="i_have_account">我已有账号</string>
    <string name="regist">注册</string>
    <string name="getYZM">获取验证码</string>
    <string name="YZM">验证码</string>
    <string name="setpassword">设置密码</string>
    <string name="now_regist">现在注册</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="comfirmpassword">确认密码</string>
    <string name="change_header">修改头像</string>
    <string name="nick">昵称</string>
    <string name="city">城市</string>
    <string name="school">学校</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="grade">年级</string>
    <string name="person_info">个人资料</string>
    <string name="smssdk_bind_mobile_show">绑定手机</string>
    <string name="smssdk_contact">添加联系人</string>
    <string name="need_login">当前模式为游客登陆</string>
    <string name="exit">退出</string>
    <string name="my_activity">我的活动</string>
    <string name="my_info">我的信息</string>
    <string name="wake_setting">提醒设置</string>
    <string name="my_mingpian">我的名片</string>
    <string name="sys_setting">系统设置</string>
    <string name="activity_title_test">足球赛？约</string>
    <string name="activity_time_test">8/17 周五</string>
    <string name="activity_address_test">杭电1教2081</string>
    <string name="activity_havejoin_test">6</string>
    <string name="activity_goto_test">去报名</string>
    <string name="submit_ok">提交成功</string>
    <string name="submiting">正在提交...</string>
    <string name="unreceive_code">收不到验证码?</string>
    <string name="registing">正在注册...</string>
    <string name="regist_error">注册失败，请重试</string>
    <string name="input_format_error">输入格式不正确，请检查</string>
    <string name="regist_success">注册成功</string>
    <string name="free_regist">免费注册</string>
    <string name="type">类型</string>
    <string name="time">时间</string>
    <string name="activity_havecoll_test">250人已收藏</string>
    <string name="host_name">主办方</string>
    <string name="address">地点</string>
    <string name="person_number">报名人数</string>
    <string name="push">发布活动</string>
    <string name="my_push">我的发起</string>
    <string name="my_apply">我的报名</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_follow">我的关注</string>
    <string name="my_comment">相关评论</string>
    <string name="my_suggestion">吐槽软件</string>
    <string name="login_success">登录成功</string>
    <string name="logining">正在登录...</string>
    <string name="login_error">登录失败，请重试</string>
    <string name="tuijie">推荐</string>
    <string name="activity">活动</string>
    <string name="office">公众活动</string>
    <string name="person">个人活动</string>
    <string name="message">消息</string>
    <string name="huihua">会话</string>
    <string name="contract">联系人</string>
    <string name="mine">我的</string>
    <string name="person1">你的卡卡了点附近</string>
    <string name="friend">好友</string>
    <string name="default_fill">未填写</string>
    <string name="info_update">资料修改</string>
    <string name="submit_error">提交失败</string>
    <string name="findpassword">找回密码</string>
    <string name="yam_error">验证码错误</string>
    <string name="publish_tittle">标题：</string>
    <string name="publish_tittleContent">请输入20个字以内的标题</string>
    <string name="publish_type">活动类型：</string>
    <string name="publish_choosetype">选择类型</string>
    <string name="publish_phone">联系方式：</string>
    <string name="publish_tphone">请输入电话号码</string>
    <string name="publish_btime">起始时间：</string>
    <string name="publish_tbtime">请输入起始时间</string>
    <string name="publish_peopleNo">活动人数：</string>
    <string name="publish_tpeopleNo">请输入人数</string>
    <string name="publish_partadr">活动地点：</string>
    <string name="publish_tpartadr">请输入活动地点</string>
    <string name="publish_togetheradr">集合地点：</string>
    <string name="publish_ttogetheradr">请输入集合地点</string>
    <string name="publish_partIntrodue">活动介绍：</string>
    <string name="publish_tpartIntrodue">请简单介绍你的活动</string>
    <string name="publish_pay">人均预算：</string>
    <string name="publish_tpay">预计资金</string>
    <string name="publish_open">是否公开：</string>
    <string name="publish_pubish">确认发布</string>
    <string name="finish">完 成</string>
    <string name="cance">取消</string>
    <string name="publish_success">发布成功</string>
    <string name="publishing">正在发布</string>
    <string name="publish_erro">发布失败</string>
    <string name="foucs">关注 5</string>
    <string name="fans">粉丝20</string>
    <string name="limit">|</string>
    <string name="chat">私 聊</string>
    <string name="btfoucs">关 注</string>
    <string name="user_info">信息</string>
    <string name="dynamic">动态</string>
    <string name="academy">学院</string>
    <string name="subscribe">TA的订阅</string>
    <string name="jump">跳过此步</string>
    <string name="complect_info">完善资料</string>
    <string name="collect">收藏</string>
    <string name="change_account">退出当前账号</string>
    <string name="change_account_message">点击更换账号按钮将退出当前账号，退出后将删除您的本机上的个人信息及缓存内容。点击退出按钮程序会正常退出，不会删除你的本机信息，
    点击取消按钮返回</string>
    <string name="network_isnot_available">当前网络不可用，请检查网络设置</string>
    <string name="Logoff_notification">下线通知</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="ok">确定</string>
    <string name="Remove_the_notification">移除通知</string>
    <string name="em_user_remove">此用户已被移除</string>
    <string name="have_you_removed">已把你从他好友列表里移除</string>
    <string name="Application_and_notify">应用通知</string>
    <string name="group_chat">群聊</string>
    <string name="chat_room">聊天室</string>
    <string name="robot_chat">机器人</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="the_current_network">当前网络不可用，请检查网络设置</string>
    <string name="Invite_you_to_join_a_group_chat">邀请你加入了群聊</string>
    <string name="Agreed_to_your_group_chat_application">同意了你的群聊申请</string>
    <string name="session">会话</string>
    <string name="address_book">通讯录</string>
    <string name="now_refresh_list">正在刷新联系人</string>
    <string name="search_new">搜</string>
    <string name="search_header">搜</string>
    <string name="text_ack_msg">已读</string>
    <string name="text_delivered_msg">送达</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_video">视频</string>
    <string name="attach_file">文件</string>
    <string name="attach_voice_call">语音电话</string>
    <string name="attach_video_call">视频通话</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="delete_conversation_messages">删除会话和消息</string>
    <string name="delete_conversation">删除会话</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">请检查网络或稍候重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="voice_call">[语音通话]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="set">设置</string>
    <string name="notify">新消息提醒</string>
    <string name="newnotify">接收新消息通知</string>
    <string name="voice">声音</string>
    <string name="shake">震动</string>
    <string name="chatset">聊天设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="book_black">通讯录黑名单</string>
    <string name="setting">设置</string>
    <string name="save_new_nickname">保存</string>
    <string name="nickname_description">设置此昵称以后，在与iOS客户端demo聊天过程中，iOS一侧会显示此昵称而不是环信ID，如果对方使用安卓客户端则此设置不生效</string>
    <string name="add_friend">添加好友</string>
    <string name="search">搜索</string>
    <string name="black_item">黑名单</string>
    <string name="diagnose">诊断</string>
    <string name="push_nick">iOS离线推送昵称</string>
    <string name="Current_version">当前版本</string>
    <string name="Not_Set">未设置</string>
    <string name="Upload_the_log">上传日志中</string>
    <string name="The_new_group_chat">新建群组</string>
    <string name="add_public_group_chat">添加公开群</string>
    <string name="add_public_chat_room">添加聊天室</string>
    <string name="group_name">群聊名称</string>
    <string name="Group_chat_profile">群聊简介</string>
    <string name="Whether_the_public">是否公开</string>
    <string name="Open_group_members_invited">开放群成员邀请</string>
    <string name="Open_group_chat">公开的群聊</string>
    <string name="blacklist">黑名单列表</string>
    <string name="Empty_the_chat_record">清空聊天记录</string>
    <string name="Shielding_of_the_message">屏蔽群消息</string>
    <string name="dismiss_group">解散群聊</string>
    <string name="Select_the_contact">选择联系人</string>
    <string name="Group_chat_information">群聊资料</string>
    <string name="Group_of_Lord">群主</string>
    <string name="Introduction">简介</string>
    <string name="To_join_the_chat">加入群聊</string>
    <string name="user_name">用户名</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="downwaiting">正在下载文件请稍后</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="unable_to_connect">不能连接到服务器</string>
    <string name="newchat">新建聊天</string>
    <string name="agree">同意</string>
    <string name="Group_chat">群聊:</string>
    <string name="not_download">未下载:</string>
    <string name="Please_enter_a_username">请输入用户名</string>
    <string name="is_down_please_wait">正在下载视频请稍候</string>
    <string name="Exit_the_group_chat">退出群聊</string>
    <string name="not_add_myself">不能添加自己</string>
</resources>