<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/public_bg" />
        >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/grey"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"

            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/publish_tittle"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/et_tittle"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_centerVertical="true"
                android:background="@drawable/edit_no_stroke"
                android:hint="@string/publish_tittleContent"
                android:textColorHint="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/choiceType"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:gravity="right"
                    android:text="@string/publish_type"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/chooseType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/publish_choosetype"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="2dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:gravity="right"
                    android:text="@string/publish_phone"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/et_phone"
                    style="@style/publish_edit"
                    android:hint="@string/publish_tphone"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="2dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"

                    android:background="@color/white"
                    android:gravity="right"
                    android:text="@string/publish_btime"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/btime"
                    style="@style/publish_edit"
                    android:hint="@string/publish_tbtime"
                    android:inputType="datetime" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"

                >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"

                    android:background="@color/white"
                    android:gravity="right"
                    android:text="@string/publish_peopleNo"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/et_peopleNo"
                    style="@style/publish_edit"
                    android:hint="@string/publish_tpeopleNo"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="2dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"

                    android:background="@color/white"
                    android:gravity="right"
                    android:text="@string/publish_partadr"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/et_address"
                    style="@style/publish_edit"
                    android:hint="@string/publish_tpartadr" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/white">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:gravity="right"
                    android:text="@string/publish_partIntrodue"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/et_introdue"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_no_stroke"
                    android:hint="@string/publish_tpartIntrodue"
                    android:maxLines="10"
                    android:singleLine="false"
                    android:onClick="PartyIntrodue"
                    android:textColorHint="@color/grey"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:textSize="16dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="2dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="@color/white"
                    android:gravity="left"
                    android:text="@string/publish_open"
                    android:textSize="18sp" />

                <CheckBox

                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingRight="25dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@color/white">

            <com.dd.processbutton.iml.SubmitProcessButton
                android:id="@+id/btPublish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/publish_pubish"
                android:textSize="22sp"
                android:layout_marginTop="24dp"
                android:layout_margin="15dp"
                android:textColor="@android:color/white"
                app:pb_colorComplete="@color/colorAccent"
                app:pb_colorNormal="@color/fbutton_normal"
                app:pb_cornerRadius="5dp"
                app:pb_colorPressed="@color/fbutton_pressed"
                app:pb_textComplete="@string/publish_success"
                app:pb_textProgress="@string/publishing"
                app:pb_textError="@string/publish_erro"
                app:pb_colorError="@color/red_error" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

