<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>

        <TextView
            android:id="@+id/ll2"
            android:textSize="13sp"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_below="@id/appbar"
            android:text="@string/use_account_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <RelativeLayout
        android:background="@color/white"
        android:layout_below="@id/ll2"
        android:id="@+id/rlusername"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:tint="?attr/colorPrimary"
            android:layout_marginLeft="15dp"
            android:id="@+id/iv_username"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/bottom4_select"
            />

        <android.support.design.widget.TextInputLayout

            android:id="@+id/textinput"
            android:layout_toRightOf="@id/iv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:paddingLeft="5dp"
                android:id="@+id/et_username"
                android:textCursorDrawable="@null"
                android:layout_centerVertical="true"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>


        <View
            android:background="#88c8c8c8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <RelativeLayout
        android:background="@color/white"
        android:layout_below="@id/rlusername"
        android:id="@+id/rlpassword"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:layout_marginLeft="15dp"
            android:id="@+id/iv_password"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/lock"
            />


        <android.support.design.widget.TextInputLayout

            android:id="@+id/til_pass"
            android:layout_toRightOf="@id/iv_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_password"
                android:paddingLeft="5dp"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                android:layout_centerVertical="true"
                android:hint="@string/password"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </android.support.design.widget.TextInputLayout>


        <View
            android:background="#88c8c8c8"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

    <!--<Button-->
        <!--android:id="@+id/bt_login"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:text="@string/login"-->
        <!--android:enabled="false"-->
        <!--android:textColor="@color/white"-->
        <!--android:textSize="18sp"-->
        <!--android:layout_below="@id/rlpassword"-->
        <!--android:background="@drawable/loginbuttonbg"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->


    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="22sp"
        android:layout_marginTop="24dp"
        android:layout_below="@id/rlpassword"
        android:layout_margin="15dp"
        android:textColor="@android:color/white"
        app:pb_colorComplete="@color/colorAccent"
        app:pb_colorNormal="@color/fbutton_normal"
        app:pb_cornerRadius="5dp"
        app:pb_colorPressed="@color/fbutton_pressed"
        app:pb_textComplete="@string/login_success"
        app:pb_textProgress="@string/logining"
        app:pb_textError="@string/login_error"
        app:pb_colorError="@color/red_error" />

    <TextView
        android:id="@+id/tv_forgetpass"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/bt_login"
        android:layout_marginLeft="20dp"
        android:text="@string/forgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_regist"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/bt_login"
        android:layout_marginRight="20dp"
        android:text="@string/free_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_below="@id/tv_forgetpass"
        android:layout_width="match_parent"
        android:layout_height="20dp">

        <ImageView
            android:layout_margin="15dp"
            android:layout_gravity="center_vertical"
            android:background="#888888"
            android:layout_width="wrap_content"
            android:layout_height="1px"
            android:layout_weight="1"
            />

        <TextView

            android:textSize="13sp"
            android:text="@string/usethirdaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_margin="15dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#888888"
            android:layout_width="wrap_content"
            android:layout_height="1px"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/ll1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_qq"
                android:layout_gravity="center"
                android:src="@drawable/logo_qq"
                android:scaleType="fitCenter"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:text="QQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_weixin"
                android:layout_gravity="center"
                android:src="@drawable/logo_wechat"
                android:scaleType="fitCenter"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:text="@string/weixin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_weibo"
                android:layout_gravity="center"
                android:src="@drawable/logo_sinaweibo"
                android:scaleType="fitCenter"
                android:layout_width="50dp"
                android:layout_height="50dp" />
            <TextView
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:text="@string/weibo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>




    </LinearLayout>


</RelativeLayout>