<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    app:layout_scrollFlags="scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

   <LinearLayout
       android:background="@color/white"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:singleLine="true"
           android:id="@+id/schools"
           android:gravity="center_horizontal"
           android:text="@string/school"
           android:layout_marginBottom="5dp"
           android:layout_marginTop="3dp"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:textSize="16sp"
           android:textColor="@color/black"
           android:layout_height="wrap_content" />

       <ImageView
           android:layout_marginTop="3dp"
           android:layout_marginBottom="3dp"
           android:background="@color/little_black"
           android:layout_width="1px"
           android:layout_height="match_parent" />

       <TextView
           android:singleLine="true"
           android:id="@+id/types"
           android:text="@string/type"
           android:textColor="@color/black"
           android:gravity="center_horizontal"
           android:layout_marginBottom="5dp"
           android:layout_marginTop="3dp"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:textSize="16sp"
           android:layout_height="wrap_content" />

       <ImageView
           android:layout_marginTop="3dp"
           android:layout_marginBottom="3dp"
           android:background="@color/little_black"
           android:layout_width="1px"
           android:layout_height="match_parent" />

       <TextView
           android:singleLine="true"
           android:id="@+id/time"
           android:gravity="center_horizontal"
           android:text="@string/time"
           android:textColor="@color/black"
           android:layout_marginBottom="5dp"
           android:layout_marginTop="3dp"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:textSize="16sp"
           android:layout_height="wrap_content" />
   </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>